[package]
name = "ocilot"
description = "cli and library for interacting with OCI registries"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["aws", "progress", "compression"]
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-ecr",
    "dep:aws-sdk-ecrpublic",
]
compression = ["dep:async-compression"]
progress = ["dep:indicatif", "dep:tracing-indicatif"]

[dependencies]
async-compression = { version = "0.4", features = [
    "tokio",
    "bzip2",
    "gzip",
    "lzma",
    "xz",
    "zstd",
], optional = true }
async-recursion = "1.1"
async-trait = "0.1"
aws-config = { version = "1", default-features = false, features = [
    "credentials-process",
    "default-https-client",
    "rt-tokio",
], optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sdk-ecr = { version = "1", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
], optional = true }
aws-sdk-ecrpublic = { version = "1", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
], optional = true }
base16 = "0.2"
base64 = "0.22"
bon = "3"
bytes = "1.11"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indicatif = { version = "0.18", optional = true }
home = "0.5"
keyring = "3.6"
reqwest = { version = "0.13", features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
snafu = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-indicatif = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
astral-tokio-tar = "0.6"
url = "2"
